2003-12-08  Sven Neumann  <sven@gimp.org>
	* Makefile.am (SUBDIRS): added libgimpthumb.

	* libgimpthumb/gimpthumb-utils.c
	* libgimpthumb/gimpthumbnail.c: basic functionality is implemented
	and seems to be working.

	* app/Makefile.am: link the application against libgimpthumb.

	* app/core/core-types.h: include libgimpthumb/gimpthumb-types.h.

	* app/core/gimpimagefile.[ch]: removed thumbnail handling routines
	and use libgimpthumb instead. Fixes bug #127914.

	* app/gui/file-open-dialog.c
	* app/widgets/gimpdocumentview.c: changed accordingly.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@11719 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/app/Makefile.am
+++ b/app/Makefile.am
@@ -91,6 +91,7 @@ gimp_1_3_LDADD = \
 	$(top_builddir)/libgimpmath/libgimpmath-$(LT_RELEASE).la	\
 	$(top_builddir)/libgimpbase/libgimpbase-$(LT_RELEASE).la	\
 	$(top_builddir)/libgimpmodule/libgimpmodule-$(LT_RELEASE).la	\
+	$(top_builddir)/libgimpthumb/libgimpthumb-$(LT_RELEASE).la	\
 	$(top_builddir)/libgimpwidgets/libgimpwidgets-$(LT_RELEASE).la	\
 	$(GTK_LIBS)							\
 	$(LIBART_LIBS)							\
@@ -121,6 +122,7 @@ gimp_console_1_3_LDADD = \
 	$(top_builddir)/libgimpcolor/libgimpcolor-$(LT_RELEASE).la	\
 	$(top_builddir)/libgimpmath/libgimpmath-$(LT_RELEASE).la	\
 	$(top_builddir)/libgimpbase/libgimpbase-$(LT_RELEASE).la	\
+	$(top_builddir)/libgimpthumb/libgimpthumb-$(LT_RELEASE).la	\
 	$(top_builddir)/libgimpmodule/libgimpmodule-$(LT_RELEASE).la	\
 	$(GDK_PIXBUF_LIBS)						\
 	$(LIBART_LIBS)							\
