2003-12-08  Sven Neumann  <sven@gimp.org>
	* configure.in: bumped version number to 1.3.24.
        (AC_CONFIG_FILES): added files in devel-docs/libgimpthumb.

	* gimp.spec.in: added files from libgimpthumb.

2003-12-08  Sven Neumann  <sven@gimp.org>

	* Makefile.am
	* libgimpthumb/Makefile.am
	* libgimpthumb/libgimpthumb-docs.sgml
	* libgimpthumb/libgimpthumb-sections.txt
	* libgimpthumb/libgimpthumb.types
	* libgimpthumb/version.in
	* libgimpthumb/tmpl/gimpthumb-enums.sgml
	* libgimpthumb/tmpl/gimpthumb-error.sgml
	* libgimpthumb/tmpl/gimpthumb-utils.sgml
	* libgimpthumb/tmpl/gimpthumbnail.sgml: added framework for
	libgimpthumb documentation.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@11721 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/configure.in
+++ b/configure.in
@@ -47,7 +47,7 @@ AC_SUBST(WMF_REQUIRED_VERSION)
 #
 GIMP_MAJOR_VERSION=1
 GIMP_MINOR_VERSION=3
-GIMP_MICRO_VERSION=23
+GIMP_MICRO_VERSION=24
 GIMP_INTERFACE_AGE=0
 GIMP_BINARY_AGE=0
 GIMP_VERSION=$GIMP_MAJOR_VERSION.$GIMP_MINOR_VERSION.$GIMP_MICRO_VERSION
@@ -1452,6 +1452,8 @@ devel-docs/libgimpmath/Makefile
 devel-docs/libgimpmath/version
 devel-docs/libgimpmodule/Makefile
 devel-docs/libgimpmodule/version
+devel-docs/libgimpthumb/Makefile
+devel-docs/libgimpthumb/version
 devel-docs/libgimpwidgets/Makefile
 devel-docs/libgimpwidgets/version
 docs/Makefile
