2003-12-08  Manish Singh  <yosh@gimp.org>
        * Makefile.am
        * configure.in: added --disable-devel-docs, to skip the devel-docs
        dir entirely. Also, changed --enable-gimpdir to --with-gimpdir
        since that semantic makes more sense.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@11733 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/Makefile.am
+++ b/Makefile.am
@@ -23,8 +23,8 @@ SUBDIRS = \
 	$(GIMP_MODULES)		\
 	$(GIMP_PLUGINS)		\
 	etc			\
-	docs			\
-	devel-docs
+	$(GIMP_DEVEL_DOCS)	\
+	docs
 
 bin_SCRIPTS = gimptool-$(LT_RELEASE) @GIMPINSTALL@
 
