--- a/configure.in
+++ b/configure.in
@@ -1225,10 +1225,20 @@ if test x$enable_gtk_doc = xyes ; then
   fi
 fi
 
+dnl Allow skipping the devel-docs dir entirely
+AC_ARG_ENABLE(devel-docs, [  --disable-devel-docs    disable building and installation of developer docs],, enable_devel_docs=yes)
+
+GIMP_DEVEL_DOCS=devel-docs
+if test x$enable_devel_docs = xno; then
+  enable_gtk_doc=no
+  GIMP_DEVEL_DOCS=
+fi
+
+AC_SUBST(GIMP_DEVEL_DOCS)
+
 dnl NOTE: We need to use a separate automake conditional for this
 dnl       to make this work with the tarballs.
 AM_CONDITIONAL(ENABLE_GTK_DOC, test x$enable_gtk_doc = xyes)
-
 
 #########################################
 # Allow to configure the gimp environment
@@ -1254,10 +1264,10 @@ fi
 
 dnl Possibly change default gimpdir from .gimp-major.minor
 gimpdir=.$PACKAGE-$GIMP_MAJOR_VERSION.$GIMP_MINOR_VERSION
-AC_ARG_ENABLE(gimpdir, [  --enable-gimpdir=DIR    change default gimpdir from .gimp-1.3 to DIR],
-if eval "test x$enable_gimpdir != x"; then
-  if eval "test x$enable_gimpdir != xyes"; then
-    gimpdir=$enable_gimpdir
+AC_ARG_WITH(gimpdir, [  --with-gimpdir=DIR      change default gimpdir from .gimp-1.3 to DIR],
+if eval "test x$with_gimpdir != x"; then
+  if eval "test x$with_gimpdir != xyes"; then
+    gimpdir=$with_gimpdir
   fi
 fi)
 
