Moved GimpOldPreview from libgimp/gimpmiscui to its own not installed library.
git-svn-id: http://svn.gnome.org/svn/gimp/trunk@11754 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/configure.in
+++ b/configure.in
@@ -1408,6 +1408,7 @@ app/xcf/Makefile
 plug-ins/Makefile
 plug-ins/libgck/Makefile
 plug-ins/libgck/gck/Makefile
+plug-ins/libgimpoldpreview/Makefile
 plug-ins/dbbrowser/Makefile
 plug-ins/script-fu/Makefile
 plug-ins/script-fu/siod/Makefile
