2003-12-12  Hans Breuer  <hans@breuer.org>
	[
	 I've postponed my reservations against pangoft2/fontconfig/freetype2
	 usage, so The Gimp should now build with msvc without patching it.
	]

	* app/makefile.msc app/text/makefile.msc : use $(PANGOFT2_CFLAGS) etc.

	* libgimpthumb/makefile.msc : (new file)
	* makefile.msc : added libgimpthumb

	* libgimpthumb/gimpthumbnail.c : include gimpwin32-io.h
	* libgimpthumb/gimpthumb-utils.c : don't compare size pointer
	with GIMP_THUMB_SIZE_FAIL but *size

	* plug-ins/makefile.msc : handle libgimpoldpreview

	* plug-ins/common/decompose.c : define cbrt() if not __GLIBC__

	* plug-ins/common/winclipboard.c : make it compile without gimpcompat.h

	* plug-ins/imagemap/imagemap_csim_lex.c : its a generated file
	but still win32/msvc has no unistd.h

	* plug-ins/pygimp/makefile.msc : (new file) to use the binary you
	need to patch glib, see bug #98737

	* plug-ins/libgimpoldpreview.c : use <libgimp/gimp.h> instead of "gimp.h"

	* **/Makefile.am : added makefile.msc to EXTRA_DIST


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@11766 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/app/text/makefile.msc
+++ b/app/text/makefile.msc
@@ -7,6 +7,7 @@ PKG_VER = 1.3
 
 PKG_LINK = \
 	$(GLIB_LIBS) $(PANGOFT2_LIBS) \
+	$(FREETYPE2_LIBS) \
 	..\config\appconfig-$(PKG_VER).lib \
 	..\base\appbase-$(PKG_VER).lib \
 	..\..\libgimpbase\gimpbase-$(PKG_VER).lib \
@@ -19,9 +20,14 @@ OBJECTS = \
 	gimpfontlist.obj \
 	gimptext.obj \
 	gimptext-parasite.obj \
+!IFNDEF PANGO_WIN32_EXTENDED
+	gimptext-bitmap.obj \
+	gimptext-vectors.obj \
+!ELSE
 	gimptext-bitmap-win32.obj \
-	gimptext-compat.obj \
 	gimptext-vectors-win32.obj \
+!ENDIF
+	gimptext-compat.obj \
 	gimptext-xlfd.obj \
 	gimptextlayer.obj \
 	gimptextlayer-xcf.obj \
@@ -37,8 +43,9 @@ INCLUDES = \
 	$(GLIB_CFLAGS) \
 	$(FONTCONFIG_CFLAGS) \
 	$(PANGO_CFLAGS) $(GTK2_CFLAGS) \
-
-# $(FREETYPE2_CFLAGS) 
+!IFNDEF PANGO_WIN32_EXTENDED
+	$(FREETYPE2_CFLAGS) 
+!ENDIF
 
 all : \
 	$(PRJ_TOP)\config.h \
