--- a/app/makefile.msc
+++ b/app/makefile.msc
@@ -44,9 +44,10 @@ PKG_LINK = \
 	plug-in/appplug-in.lib \
 	$(PRJ_TOP)/regexrepl/regexrepl.lib \
 	\
+	$(top_builddir)/libgimpbase/gimpbase-$(LT_RELEASE).lib \
 	$(top_builddir)/libgimpcolor/gimpcolor-$(LT_RELEASE).lib \
 	$(top_builddir)/libgimpmath/gimpmath-$(LT_RELEASE).lib \
-	$(top_builddir)/libgimpbase/gimpbase-$(LT_RELEASE).lib \
+	$(top_builddir)/libgimpthumb/gimpthumb-$(LT_RELEASE).lib \
 	$(top_builddir)/libgimpmodule/gimpmodule-$(LT_RELEASE).lib \
 	$(top_builddir)/libgimpwidgets/gimpwidgets-$(LT_RELEASE).lib \
 	$(GLIB_LIBS) \
@@ -55,7 +56,12 @@ PKG_LINK = \
 	$(GIMP_MP_LIBS) \
 	$(INTL_LIBS) \
 	$(LIBART_LIBS) \
-	$(PANGOWIN32_LIBS)
+	$(PANGOWIN32_LIBS) \
+!IFNDEF PANGO_WIN32_EXTENDED
+	$(PANGOFT2_LIBS) \
+	$(FREETYPE2_LIBS) \
+	$(FONTCONFIG_LIBS) \
+!ENDIF
 
 gimp_LDFLAGS = \
 	-export-dynamic -export-symbols $(srcdir)/gimp.sym
