2003-12-16  Dave Neary  <bolsh@gimp.org>
        * */Makefile.am: Fixed syntax errors in makefiles. Oops.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@11793 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/devel-docs/app/Makefile.am
+++ b/devel-docs/app/Makefile.am
@@ -205,16 +205,15 @@ maintainer-clean-local: clean
 install-data-local:
 	$(mkinstalldirs) $(DESTDIR)$(TARGET_DIR)
 	(installfiles=`echo $(srcdir)/html/*`; \
-	if test -f '$(srcdir)/html/index.sgml'; \
-	then
+	if test -f "$(srcdir)/html/index.sgml"; \
+	then \
 	  for i in $$installfiles; do \
 	    echo '-- Installing '$$i ; \
 	    $(INSTALL_DATA) $$i $(DESTDIR)$(TARGET_DIR); \
 	  done; \
 	  echo '-- Installing $(srcdir)/html/index.sgml' ; \
 	  $(INSTALL_DATA) $(srcdir)/html/index.sgml $(DESTDIR)$(TARGET_DIR); \
-	else
-	  echo '-- Nothing to install' ; \
+	else echo '-- Nothing to install' ; \
 	fi)
 
 uninstall-local:
