--- a/devel-docs/libgimpbase/Makefile.am
+++ b/devel-docs/libgimpbase/Makefile.am
@@ -147,7 +147,7 @@ maintainer-clean-local: clean
 install-data-local:
 	$(mkinstalldirs) $(DESTDIR)$(TARGET_DIR)
 	(installfiles=`echo $(srcdir)/html/*`; \
-	if test -f '$(srcdir)/html/index.sgml'; \
+	if test -f "$(srcdir)/html/index.sgml"; \
 	then \
 	  for i in $$installfiles; do \
 	    echo '-- Installing '$$i ; \
