2003-12-26  Sven Neumann  <sven@gimp.org>
	* plug-ins/imagemap/imap_cern.y
	* plug-ins/imagemap/imap_csim.y
	* plug-ins/imagemap/imap_ncsa.y
	* plug-ins/script-fu/script-fu-console.c
	* plug-ins/script-fu/script-fu-server.c: include gtk.h with angle
	brackets, not quotes.

	* plug-ins/imagemap/imap_cern_parse.[ch]
	* plug-ins/imagemap/imap_csim_parse.[ch]
	* plug-ins/imagemap/imap_ncsa_parse.[ch]: regenerated.

	* plug-ins/imagemap/Makefile.am: added y.tab.h (created by bison)
	to CLEANFILES.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@11841 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/plug-ins/imagemap/Makefile.am
+++ b/plug-ins/imagemap/Makefile.am
@@ -149,6 +149,8 @@ LDADD = \
 	$(GTK_LIBS)							\
 	$(INTLLIBS)
 
+CLEANFILES = y.tab.h
+
 ## The following rules are not necessary for most users.  They are
 ## only used by the maintainers who modify the symbols and grammar
 ## that are used for parsing the map files.  These rules are very
