2003-12-26  Sven Neumann  <sven@gimp.org>
	* libgimp/gimpmisc.[ch]: applied a modified version of a patch
	from Maurits Rijk that cleans up the remaining API (bug #125141).

	* plug-ins/common/curve_bend.c
	* plug-ins/common/displace.c
	* plug-ins/common/edge.c
	* plug-ins/common/illusion.c
	* plug-ins/common/shift.c
	* plug-ins/gflare/gflare.c: changed accordingly.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@11843 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/plug-ins/imagemap/Makefile.am
+++ b/plug-ins/imagemap/Makefile.am
@@ -149,7 +149,7 @@ LDADD = \
 	$(GTK_LIBS)							\
 	$(INTLLIBS)
 
-CLEANFILES = y.tab.h
+CLEANFILES = y.tab.c y.tab.h
 
 ## The following rules are not necessary for most users.  They are
 ## only used by the maintainers who modify the symbols and grammar
