2003-12-27  Simon Budig  <simon@gimp.org>
	Dashed stroking is here...  :-)

	* app/core/gimpdrawable-stroke.c: actually use the dash pattern
	from the options

	* app/core/gimpscanconvert.c: Normalize the dash pattern, so
	that libart does the right thing.

	* app/core/gimpstrokeoptions.c: Fix default value for dash
	offset, handle the property_get for PROP_DASH_INFO correct.

	* app/widgets/gimpdasheditor.[ch]
	* app/widgets/Makefile.am
	* app/widgets/widgets-types.h: New widget to edit a dash
	pattern.

	* app/widgets/gimpstrokeeditor.c: Use it.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@11852 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/app/widgets/Makefile.am
+++ b/app/widgets/Makefile.am
@@ -63,6 +63,8 @@ libappwidgets_a_sources = \
 	gimpcontainerview-utils.h	\
 	gimpcursor.c			\
 	gimpcursor.h			\
+	gimpdasheditor.c		\
+	gimpdasheditor.c		\
 	gimpdataeditor.c		\
 	gimpdataeditor.h		\
 	gimpdatafactoryview.c		\
