--- a/plug-ins/MapObject/Makefile.am
+++ b/plug-ins/MapObject/Makefile.am
@@ -49,4 +49,5 @@ LDADD = \
 	$(top_builddir)/libgimpmath/libgimpmath-$(LT_RELEASE).la	\
 	$(top_builddir)/libgimpbase/libgimpbase-$(LT_RELEASE).la	\
 	$(GTK_LIBS)							\
+	$(RT_LIBS)							\
 	$(INTLLIBS)
