--- a/plug-ins/faxg3/Makefile.am
+++ b/plug-ins/faxg3/Makefile.am
@@ -26,4 +26,5 @@ LDADD = \
 	$(top_builddir)/libgimpcolor/libgimpcolor-$(LT_RELEASE).la	\
 	$(top_builddir)/libgimpbase/libgimpbase-$(LT_RELEASE).la	\
 	$(GLIB_LIBS)							\
+	$(RT_LIBS)							\
 	$(INTLLIBS)
