--- a/plug-ins/helpbrowser/Makefile.am
+++ b/plug-ins/helpbrowser/Makefile.am
@@ -27,4 +27,5 @@ LDADD = \
 	$(top_builddir)/libgimpcolor/libgimpcolor-$(LT_RELEASE).la	\
 	$(top_builddir)/libgimpbase/libgimpbase-$(LT_RELEASE).la	\
 	$(GTKHTML2_LIBS)						\
+	$(RT_LIBS)							\
 	$(INTLLIBS)
