--- a/plug-ins/pygimp/Makefile.am
+++ b/plug-ins/pygimp/Makefile.am
@@ -23,7 +23,8 @@ gimpmodule_la_LIBADD = \
 	$(top_builddir)/libgimp/libgimp-$(LT_RELEASE).la		\
 	$(top_builddir)/libgimpcolor/libgimpcolor-$(LT_RELEASE).la	\
 	$(top_builddir)/libgimpbase/libgimpbase-$(LT_RELEASE).la	\
-	$(GLIB_LIBS)
+	$(GLIB_LIBS)							\
+	$(RT_LIBS)
 
 pygimp_PYTHON = \
 	gimpplugin.py	\
