--- a/plug-ins/sel2path/Makefile.am
+++ b/plug-ins/sel2path/Makefile.am
@@ -48,4 +48,5 @@ LDADD = \
 	$(top_builddir)/libgimpcolor/libgimpcolor-$(LT_RELEASE).la	\
 	$(top_builddir)/libgimpbase/libgimpbase-$(LT_RELEASE).la	\
 	$(GTK_LIBS)							\
+	$(RT_LIBS)							\
 	$(INTLLIBS)
