--- a/plug-ins/ifscompose/Makefile.am
+++ b/plug-ins/ifscompose/Makefile.am
@@ -30,4 +30,5 @@ LDADD = \
 	$(top_builddir)/libgimpcolor/libgimpcolor-$(LT_RELEASE).la	\
 	$(top_builddir)/libgimpbase/libgimpbase-$(LT_RELEASE).la	\
 	$(GTK_LIBS)							\
+	$(RT_LIBS)							\
 	$(INTLLIBS)
