2004-01-03  Manish Singh  <yosh@gimp.org>
        * configure.in: fix setting of RT_LIBS.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@11885 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/configure.in
+++ b/configure.in
@@ -589,13 +589,7 @@ elif test "x$shmtype" = "xposix"; then
 
   RT_LIBS=
   if test "$have_shm_open" != "yes"; then
-    gimp_save_LIBS=$LIBS
-    LIBS=""
-
-    AC_CHECK_LIB(rt, shm_open, have_shm_open=yes)
-
-    RT_LIBS="$LIBS"
-    LIBS=$gimp_save_LIBS
+    AC_CHECK_LIB(rt, shm_open, RT_LIBS="-lrt" have_shm_open=yes)
   fi
   AC_SUBST(RT_LIBS)
 
