2004-01-03  Manish Singh  <yosh@gimp.org>
        * plug-ins/twain/Makefile.am
        * plug-ins/winsnap/Makefile.am: minor tweaks, to match changes that
        were made in the other Makefiles long ago.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@11886 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/plug-ins/twain/Makefile.am
+++ b/plug-ins/twain/Makefile.am
@@ -21,16 +21,15 @@ EXTRA_DIST = \
 	tw_sess.c
 
 INCLUDES = \
-	-I$(top_srcdir)			\
-	$(GLIB_CFLAGS)
-
-AM_CPPFLAGS = \
-        -DLOCALEDIR=\""$(localedir)"\"
+	-I$(top_srcdir)	\
+	$(GLIB_CFLAGS)	\
+	-I$(includedir)
 
 LDADD = \
-	$(top_builddir)/libgimp/libgimpui-$(LT_RELEASE).la	\
-	$(top_builddir)/libgimp/libgimp-$(LT_RELEASE).la	\
-	$(GLIB_LIBS)						\
+	$(top_builddir)/libgimp/libgimp-$(LT_RELEASE).la		\
+	$(top_builddir)/libgimpcolor/libgimpcolor-$(LT_RELEASE).la	\
+	$(top_builddir)/libgimpbase/libgimpbase-$(LT_RELEASE).la	\
+	$(GLIB_LIBS)							\
 	$(RT_LIBS)							\
-	$(INTLLIBS)						\
+	$(INTLLIBS)							\
 	-luser32
