--- a/gimp.spec.in
+++ b/gimp.spec.in
@@ -164,7 +164,6 @@ cat gimp-plugin-files gimp-tips-files > gimp.files
 %{prefix}/lib/libgimpui-%{subver}.so.%{microver}.0.0
 %{prefix}/lib/libgimpui-%{subver}.so.%{microver}
 
-# 1.3
 %{prefix}/lib/libgimpbase-%{subver}.so.%{microver}.0.0
 %{prefix}/lib/libgimpbase-%{subver}.so.%{microver}
 %{prefix}/lib/libgimpcolor-%{subver}.so.%{microver}.0.0
@@ -185,8 +184,8 @@ cat gimp-plugin-files gimp-tips-files > gimp.files
 
 %{prefix}/share/locale/
 
-%{prefix}/bin/gimp-1.3
-%{prefix}/bin/gimp-remote-1.3
+%{prefix}/bin/gimp-%{subver}
+%{prefix}/bin/gimp-remote-%{subver}
 
 %defattr (0444, bin, man)
 
@@ -195,7 +194,7 @@ cat gimp-plugin-files gimp-tips-files > gimp.files
 
 %files devel
 %defattr (0555, bin, bin, 0555)
-%{prefix}/bin/gimptool-1.3
+%{prefix}/bin/gimptool-%{subver}
 %{prefix}/lib/*.so
 %{prefix}/lib/*.la
 %dir %{prefix}/lib/gimp/%{subver}
@@ -203,10 +202,9 @@ cat gimp-plugin-files gimp-tips-files > gimp.files
 %{prefix}/lib/gimp/%{subver}/modules/*.la
 
 %defattr (0444, root, root, 0555)
-#new stuff 1.3
-%{prefix}/lib/pkgconfig/gimp-1.3.pc
-%{prefix}/lib/pkgconfig/gimpui-1.3.pc
-%{prefix}/lib/pkgconfig/gimpthumb-1.3.pc
+%{prefix}/lib/pkgconfig/gimp-%{subver}.pc
+%{prefix}/lib/pkgconfig/gimpui-%{subver}.pc
+%{prefix}/lib/pkgconfig/gimpthumb-%{subver}.pc
 
 %dir %{prefix}/include/gimp-%{subver}/libgimpbase
 %{prefix}/include/gimp-%{subver}/libgimpbase/*
