--- a/configure.in
+++ b/configure.in
@@ -50,7 +50,8 @@ GIMP_MINOR_VERSION=3
 GIMP_MICRO_VERSION=24
 GIMP_INTERFACE_AGE=0
 GIMP_BINARY_AGE=0
-GIMP_VERSION=$GIMP_MAJOR_VERSION.$GIMP_MINOR_VERSION.$GIMP_MICRO_VERSION
+#GIMP_VERSION=$GIMP_MAJOR_VERSION.$GIMP_MINOR_VERSION.$GIMP_MICRO_VERSION
+GIMP_VERSION=2.0pre1
 
 AC_SUBST(GIMP_MAJOR_VERSION)
 AC_SUBST(GIMP_MINOR_VERSION)
