--- a/gimpui-1.3.pc.in
+++ b/gimpui-1.3.pc.in
@@ -5,7 +5,7 @@ includedir=@includedir@
 
 Name: GIMP UI
 Description: GIMP User Interface Library
-Version: @VERSION@
+Version: @GIMP_MAJOR_VERSION@.@GIMP_MINOR_VERSION@.@GIMP_MICRO_VERSION@
 Requires: gimp-1.3 gtk+-2.0 >= 2.2.0
 Libs: -L${libdir} -lgimpui-1.3 -lgimpwidgets-1.3 
 Cflags: -I${includedir}/gimp-1.3
