--- a/configure.in
+++ b/configure.in
@@ -934,6 +934,8 @@ EXIF support will not be built into the JPEG plug-in.
 libexif is available from http://www.sourceforge.net/projects/libexif]))
 fi
 
+AC_SUBST(EXIF_CFLAGS)
+AC_SUBST(EXIF_LIBS)
 
 #################
 # Check for libaa
@@ -1168,6 +1170,16 @@ if test "x$enable_python" != xno; then
   dnl check for PyGTK
   PKG_CHECK_MODULES(PYGTK, pygtk-2.0 >= 1.99.12)
   AC_SUBST(PYGTK_CFLAGS)
+
+  AC_PATH_PROG(PYGTK_CODEGEN, pygtk-codegen-2.0, no)
+  if test "x$PYGTK_CODEGEN" = xno; then
+    AC_MSG_ERROR(could not find pygtk-codegen-2.0 script)
+  fi
+
+  AC_MSG_CHECKING(for pygtk defs)
+  PYGTK_DEFSDIR=`$PKG_CONFIG --variable=defsdir pygtk-2.0`
+  AC_SUBST(PYGTK_DEFSDIR)
+  AC_MSG_RESULT($PYGTK_DEFSDIR)
 fi
 AM_CONDITIONAL(BUILD_PYTHON, test "x$enable_python" != xno)
 
